tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.error
run error: exit status 254
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:4:38: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
  if (d.toString().compareTo(0 - 180.toString()) < 0) {
                                     ^
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:4:32: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
  if (d.toString().compareTo(0 - 180.toString()) < 0) {
                               ^
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:17:23: Error: The argument type 'num' can't be assigned to the parameter type 'double'.
    print(angleDiff(tc[0], tc[1]));
                      ^
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:17:30: Error: The argument type 'num' can't be assigned to the parameter type 'double'.
    print(angleDiff(tc[0], tc[1]));
                             ^
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:42:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:71:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:76:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/angle-difference-between-two-bearings-1.dart:80:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
